<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_HeightTest_CycleData" Id="{9fa01127-d8b3-4cd4-8460-18bade0da36e}">
    <Declaration><![CDATA[TYPE ST_HeightTest_CycleData :
STRUCT
	/////////////////////////////////////////////////////////////////////////////////////SETTINGS/////////////////////////////////////////////////////////////////////////////////////			
(**************************************************************************CURRENT SETTINGS DURING CYCLE. VELOCITY FOR EXAMPLE****************************************************)	
	
	anDistanceCalibrationBlock				: ARRAY [0..2] OF DINT;	
	anExpectedDistances						: ARRAY [0..2] OF DINT;	
	anHeightSetByCalibration				: ARRAY [0..3] OF DINT;	
	anTolerances							: ARRAY [0..2] OF DINT;	
	
	
/////////////////////////////////////////////////////////////////////////////////////GENERAL DATA/////////////////////////////////////////////////////////////////////////////////////			
(**************************************************************************RESULT DATA OF THE CYCLE. DISTANCE FOR EXAMPLE************************************************************)	
	
	anDistancesResult						: ARRAY [0..3] OF DINT;
	anRawMeasurement						: ARRAY [0..3] OF DINT; 

////////////////////////////////////////////////////////////////////////////////////RESULTS////////////////////////////////////////////////////////////////////////////////////////
(**************************************************************************DETERMINE IF THE PART FAIL OR PASS*********************************************************************)

	bPass				: BOOL;
	bFail				: BOOL;		

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>