<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_Animations" Id="{bc5d295e-8f2c-44b6-8eca-ee368160e4df}">
    <Declaration><![CDATA[TYPE ST_Animations :
STRUCT
	
	abDistanceBoxesRed								: ARRAY[0..5] OF BOOL;
	abDistanceBoxesGreen							: ARRAY[0..5] OF BOOL;


END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>