<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_StatisticsHMI" Id="{c13f0ccd-71ee-4c5d-9b8e-5212c4fac55e}">
    <Declaration><![CDATA[TYPE ST_StatisticsHMI :
STRUCT
	
	sName					: STRING;
	nGood					: DINT;
	nBad					: DINT;
	nTotalGood				: DINT;
	nTotalBad				: DINT;
	bResetGood				: BOOL;
	bResetBad				: BOOL;	
	nEfficency				: STRING;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>