<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_CSV" Id="{69c53c48-021c-4aea-9833-ec2a6a27b5b9}">
    <Declaration><![CDATA[TYPE ST_CSV :
STRUCT
	
	//INPUTS
	bWriteData			: BOOL;
	sFileNamePath		: STRING(255);
	sDate				: STRING(255);
	aDataLength 		: DINT;
	nMAX_CSV_ROWS		: UDINT;
	nMAX_CSV_COLUMNS	: UDINT;
	bAcknowledge		: BOOL;
	nDataHistoryIndex	: DINT;
	

	//OUTPUTS
	bError				: BOOL;
	bBusy				: BOOL;
	bDataWrited			: BOOL;
	
	
	
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>